// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensessummary 1`] = `
<div>
  <h1>
    Viewing 3 expenses totalling $1,000.00
  </h1>
</div>
`;

exports[`should render expensessummary with empty 1`] = `
<div>
  <p />
</div>
`;
